[package]
name = "datafusion-wasm"
version = "0.0.1"
authors = ["Dominik Moritz <domoritz@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/domoritz/datafusion-wasm"
description = "Apache DataFusion in WebAssembly"
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
datafusion = { git = "https://github.com/apache/arrow", features = [] }
arrow = { git = "https://github.com/apache/arrow" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.2" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Smaller code size: https://rustwasm.github.io/book/reference/code-size.html
lto = true
